# OpenGLRenderer

./: .gitignore  CMakeLists.txt  README.md
dependencies/glad/: glad.h
include/: camera.h  customShader.h  light.h  loadTextures.h  material.h  mesh.h  model.h  modelinfo.h  modes.h  shader.h  texture.h
src/: camera.cpp  config.h  customShader.cpp  glad.c  light.cpp  loadTextures.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/models/: ellie_animation.mtl
src/models/backpack/: backpack.mtl
src/shaders/: custom.fs  fragments.frag  lit.fs  lit.vs  masks.fs  masks.vs  material.fs  rotated.vs  textures.fs  vertices.vert
